force-app/main/default/objects/copado__Project__c/fields/copadoccmint__All_or_None__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__All_or_None__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Performs the upsert operation for user stories based on this value</inlineHelpText>
    <label>All or None</label>
    <type>Checkbox</type>
</CustomField>