force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Enable_Community_User__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Enable_Community_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to sync User Stories assigned to community users.</inlineHelpText>
    <label>Enable Community Users</label>
    <type>Checkbox</type>
</CustomField>