force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Epic_Query__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Epic_Query__c</fullName>
    <label>Epic Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>