force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Feature_Query__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Feature_Query__c</fullName>
    <label>Feature Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>