force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Sprint_Per_Batch_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Sprint_Per_Batch_Chunk_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>If in case, you are getting too many callout issue due to more number of User Stories per Sprint or due to more number of sprint.
    You can reduce the batch size in this field.</inlineHelpText>
    <label>Sprint Per Batch Chunk Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>