force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Team_Info__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Team_Info__c</fullName>
    <inlineHelpText>Comma separated Team Name/Id to fetch Team sprints. Exp: Frontend Team,Backend Team,QA Team</inlineHelpText>
    <label>Team Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>