force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Tree_of_Work_Items_Query__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Tree_of_Work_Items_Query__c</fullName>
    <label>Tree of Work Items Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>