force-app/main/default/objects/copado__Project__c/fields/copadoccmint__Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Workspace_Id__c</fullName>
    <label>Workspace Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>